--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ nn<!DOCTYPE html>
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
 
@@ -32,7 +32,7 @@ nn<!DOCTYPE html>
       <div class="card">
         <div class="head-div">
           <img
-            src="./assets/images/icon-star.svg"
+            src="icon-star.svg"
             alt="start icon"
             class="star"
           />
@@ -45,12 +45,12 @@ nn<!DOCTYPE html>
             >
             <img
               class="plus"
-              src=" ./assets/images/icon-plus.svg"
+              src="icon-plus.svg"
               alt="plus icon"
             />
             <img
               class="minus"
-              src=" ./assets/images/icon-minus.svg"
+              src="icon-minus.svg"
               alt="plus icon"
             />
           </div>
@@ -66,12 +66,12 @@ nn<!DOCTYPE html>
             <span class="text"> Is Frontend Mentor free?</span>
             <img
               class="plus"
-              src=" ./assets/images/icon-plus.svg"
+              src="icon-plus.svg"
               alt="plus icon"
             />
             <img
               class="minus"
-              src=" ./assets/images/icon-minus.svg"
+              src="icon-minus.svg"
               alt="plus icon"
             />
           </div>
@@ -88,12 +88,12 @@ nn<!DOCTYPE html>
             >
             <img
               class="plus"
-              src=" ./assets/images/icon-plus.svg"
+              src="icon-plus.svg"
               alt="plus icon"
             />
             <img
               class="minus"
-              src=" ./assets/images/icon-minus.svg"
+              src="icon-minus.svg"
               alt="plus icon"
             />
           </div>
@@ -111,12 +111,12 @@ nn<!DOCTYPE html>
             >
             <img
               class="plus"
-              src=" ./assets/images/icon-plus.svg"
+              src="icon-plus.svg"
               alt="plus icon"
             />
             <img
               class="minus"
-              src=" ./assets/images/icon-minus.svg"
+              src="icon-minus.svg"
               alt="plus icon"
             />
           </div>
@@ -130,33 +130,9 @@ nn<!DOCTYPE html>
         </div>
       </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
-
-<!-- FAQs
-
-  What is Frontend Mentor, and how will it help me?
-
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
-
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members. -->
-
 <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
